# bone-fracture-detection-cnn

./: .gitignore  README.md  pyproject.toml
Assignment_1/: Assignment_1_template.ipynb  Assignment_1_template_with_split.html  Assignment_1_template_with_split.ipynb
