[project]
name = "assignment-1-cv"
version = "0.1.0"
description = "Deep Learning and Sensor Fusion Assignment 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "pillow",
    "numpy",
    "scikit-learn",
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# --- ADD THIS SECTION BELOW ---
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }